Introduce a generic netgraph device.
This is so-far undocumented, but should work for pretty much any
netgraph node type(s) that understand ASCII messages.  If the PPPoE
node could accept ASCII data (it may be able to soon - it's what I've
been testing with !), a PPPoE connection could be created generically
using:

ng:
 enable lqr
 set mru 1492
 set mtu 1492
 set device netgraph:[ether:ed1]:orphans.ethernet[pppoe:pppoe].data
 set login "TIMEOUT 10 \"\" \"pppoe: pppoe_connect { hook=\\\"data\\\" data_len=8 data=\\\"pppoe-in\\\" }\\c\" cmdid"

Use at your peril !

--- a/usr.sbin/ppp/Makefile
+++ b/usr.sbin/ppp/Makefile
@@ -82,7 +82,7 @@ SRCS+=	i4b.c
 .if defined(NONETGRAPH)
 CFLAGS+=-DNONETGRAPH
 .else
-SRCS+=	ether.c
+SRCS+=	ether.c netgraph.c
 LDADD+=	-lnetgraph
 DPADD+= ${LIBNETGRAPH}
 .endif
