--- a/gnu/lib/csu/Makefile
+++ b/gnu/lib/csu/Makefile
@@ -20,11 +20,7 @@ CFLAGS+=	-I${GCCDIR}/config -I${GCCDIR} -I. \
 		-DIN_GCC \
 		-finhibit-size-directive -fno-inline-functions \
 		-fno-exceptions -fno-omit-frame-pointer
-NOMAN=		true
-NOPIC=		true
-NOPROFILE=	true
 INTERNALLIB=	true
-CLEANFILES+=	tm.h
 
 CRTS_CFLAGS=	-DCRTSTUFFS_O ${PICFLAG}
 
@@ -39,7 +35,7 @@ crt${PART}.s:  crt${PART}.asm
 	ln -sf ${.ALLSRC} ${.TARGET}
 .endfor
 .else
-crtbegin.o crtbegin.So crtend.o crtend.So:	crtstuff.c tm.h
+crtbegin.o crtbegin.So crtend.o crtend.So: ${SRCS}
 .endif
 
 crtbegin.o:
@@ -58,6 +54,7 @@ crtend.So:
 	${CC} ${CFLAGS} -g0 -DCRT_END ${CRTS_CFLAGS} \
 		-c -o ${.TARGET} ${UGLYHACK} ${.ALLSRC:N*.h}
 
+CLEANFILES+=	tm.h
 #	KEEP THIS IN SYNC with src/gnu/usr.bin/cc/cc_tools/Makefile !!
 tm.h:
 	echo '#include "gansidecl.h"'			> ${.TARGET}
