Deal with new TarGeT-specific CRT files. (sparc64 introduced the first)

--- a/gnu/lib/csu/Makefile
+++ b/gnu/lib/csu/Makefile
@@ -3,20 +3,27 @@
 GCCDIR=	${.CURDIR}/../../../contrib/gcc
 .PATH: ${GCCDIR}
 
-SRCS=		crtstuff.c tconfig.h
+CCDIR=	${.CURDIR}/../../usr.bin/cc
+.include "${CCDIR}/Makefile.tgt"
 
+SRCS=		crtstuff.c tconfig.h
 OBJS=		crtbegin.o crtend.o
 SOBJS=		crtbegin.So crtend.So
 CFLAGS+=	-DIN_GCC -DHAVE_LD_EH_FRAME_HDR
 CFLAGS+=	-finhibit-size-directive -fno-inline-functions \
 		-fno-exceptions -fno-omit-frame-pointer
 CFLAGS+=	-I${GCCDIR}/config -I${GCCDIR} -I. \
-		-I${.CURDIR}/../../usr.bin/cc/cc_tools
+		-I${CCDIR}/cc_tools
 CRTS_CFLAGS=	-DCRTSTUFFS_O ${PICFLAG}
 MKDEPCMD=	CC=${CC} MKDEP_CPP_OPTS="-M -DCRT_BEGIN" mkdep
 INTERNALLIB=	true
 
-all: ${OBJS} ${SOBJS}
+.if ${TARGET_ARCH} == "sparc64"
+.PATH: ${GCCDIR}/config/${GCC_CPU}
+TGTOBJS=		crtfastmath.o
+.endif
+
+all: ${OBJS} ${SOBJS} ${TGTOBJS}
 
 crtbegin.o crtbegin.So crtend.o crtend.So: ${SRCS}
 
@@ -37,11 +44,11 @@ crtend.So:
 		-c -o ${.TARGET} ${.ALLSRC:N*.h}
 
 CLEANFILES=	tconfig.h
-tconfig.h: ${.CURDIR}/../../usr.bin/cc/cc_tools/Makefile
+tconfig.h: ${CCDIR}/cc_tools/Makefile
 	${MAKE} -f ${.ALLSRC} MFILE=${.ALLSRC} ${.TARGET}
 
 realinstall:
-.for file in ${OBJS} ${SOBJS}
+.for file in ${OBJS} ${SOBJS} ${TGTOBJS}
 	${INSTALL} ${COPY} -o ${LIBOWN} -g ${LIBGRP} -m ${LIBMODE} \
 	    ${file} ${DESTDIR}${LIBDIR}/${file:S/.So$/S.o/}
 .endfor
