--- a/gnu/usr.bin/cc/cc1/Makefile
+++ b/gnu/usr.bin/cc/cc1/Makefile
@@ -5,12 +5,10 @@
 .PATH: ../cc_tools ${GCCDIR}
  
 PROG=	cc1
-SRCS=	c-parse.c c-parse.h c-lang.c
-# Ugh, compiled twice...
-SRCS+=	c-decl.c c-lex.c c-typeck.c
+SRCS=	main.c c-parse.c c-lang.c c-decl.c
 BINDIR=	/usr/libexec
 NOMAN=	1
-NOSHARED=yes
+NOSHARED?=yes
 
 CFLAGS+= -I.
 
@@ -19,15 +17,18 @@ LDADD+=	${LIBCC_INT}
 
 #-----------------------------------------------------------------------
 # C parser
-.ORDER: c-parse.c c-parse.h
-c-parse.c c-parse.h: c-parse.in
+.ORDER: c-parse.c
+c-parse.c: c-parse.in
 	sed -e "/^ifobjc$$/,/^end ifobjc$$/d" \
 	    -e "/^ifc$$/d" \
 	    -e "/^end ifc$$/d" \
-	    ${.ALLSRC} > c-parse.y
-	${YACC} -d -o c-parse.c c-parse.y
+	    ${GCCDIR}/c-parse.in > c-parse.y
+	${YACC} -o c-parse.c.in c-parse.y
+	sed -e "s/malloc/xmalloc/g" \
+	    -e "s/realloc/xrealloc/g" \
+	    c-parse.c.in >c-parse.c
 
-CLEANFILES+=	c-parse.c c-parse.h c-parse.y		# insurance
+CLEANFILES+=	c-parse.c           c-parse.y		# insurance
 
 #-----------------------------------------------------------------------
 
