--- a/gnu/usr.bin/cc/cc1plus/Makefile
+++ b/gnu/usr.bin/cc/cc1plus/Makefile
@@ -5,26 +5,29 @@
 .PATH: ${GCCDIR}/cp ${GCCDIR}
 
 PROG=	cc1plus
-SRCS=	parse.c parse.h cfns.h
-SRCS+=	call.c class.c cvt.c decl.c decl2.c errfn.c error.c except.c expr.c \
+SRCS=	parse.c cfns.h
+SRCS+=	main.c cp-lang.c
+SRCS+=	call.c class.c cvt.c decl.c decl2.c         error.c except.c expr.c \
 	friend.c init.c lex.c mangle.c method.c pt.c ptree.c repo.c rtti.c \
-	search.c semantics.c spew.c tree.c typeck.c typeck2.c xref.c dump.c optimize.c
+	search.c semantics.c spew.c tree.c typeck.c typeck2.c        dump.c optimize.c
 
 BINDIR=	/usr/libexec
 NOMAN=	1
-NOSHARED=yes
+NOSHARED?=yes
 
 CFLAGS+= -I${GCCDIR}/cp -I.
 
 DPADD+=	${LIBCC_INT} 
 LDADD+=	${LIBCC_INT}
 
-.ORDER: parse.c parse.h
-parse.c parse.h: parse.y
-	${YACC} -d -o parse.c ${.ALLSRC}
-	grep '^#define[   ]*YYEMPTY' parse.c >>parse.h
+.ORDER: parse.c
+parse.c: parse.y
+	${YACC} -o parse.c.in ${.ALLSRC}
+	sed -e "s/malloc/xmalloc/g" \
+	    -e "s/realloc/xrealloc/g" \
+	    parse.c.in >parse.c
 
-CLEANFILES+=	parse.c parse.h cfns.h
+CLEANFILES+=	parse.c         cfns.h
 
 cfns.h:
 	gperf -o -C -E -k '1-6,$$' -j1 -D -N 'libc_name_p' \
