--- a/gnu/usr.bin/cc/gcov/Makefile
+++ b/gnu/usr.bin/cc/gcov/Makefile
@@ -5,6 +5,9 @@
 .PATH: ${GCCDIR} ${GCCDIR}/doc
 
 PROG=	gcov
-SRCS=	gcov.c
+SRCS=	gcov.c version.c
+
+DPADD=	${LIBCC_INT}
+LDADD=	${LIBCC_INT}
 
 .include <bsd.prog.mk>
