--- a/gnu/usr.bin/cc/Makefile
+++ b/gnu/usr.bin/cc/Makefile
@@ -3,7 +3,7 @@
 # The order of some of these are rather important.  Some depend on previous
 # subdirs.
 
-SUBDIR= cc_fbsd cc_tools cc_int cccp cc1 cc
+SUBDIR= cc_fbsd cc_tools cc_int cccp cc1 cc protoize
 
 .if !defined(NO_CPP)
 SUBDIR+= cpp
@@ -11,6 +11,9 @@ SUBDIR+= cpp
 
 .if !defined(NO_CXX)
 SUBDIR+= cc1plus c++ c++filt doc
+.if !defined(NO_COLLECT2)
+SUBDIR+= collect2
+.endif
 .endif
 
 .if !defined(NO_OBJC)
