Fix search path.

--- a/gnu/usr.bin/cc/collect2/Makefile
+++ b/gnu/usr.bin/cc/collect2/Makefile
@@ -2,7 +2,7 @@
 
 .include "../Makefile.inc"
 
-.PATH: ${GCCDIR}		${GCCDIR}/../libiberty
+.PATH: ${GCCDIR}
 
 PROG=	collect2
 SRCS=	collect2.c cp-demangle.c cplus-dem.c tlink.c
